# code-whisperer

./: .env.example  README.md  opencode.json  pyproject.toml  requirements.txt
src/code_whisperer/: __main__.py  server.py
